--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "gulp-fibre-tasks": "^1.0.6"
   },
   "dependencies": {
-    "lodash": "^3.8.0",
-    "pg-crypt": "^0.9.1"
+    "jdataview": "^2.5.0",
+    "lodash": "^3.8.0"
   }
 }
