--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main-es6": "src/pg-long.es6",
   "scripts": {
     "test": "gulp test",
-    "build": "gulp build",
-    "postinstall": "babel src/ --out-dir lib/"
+    "build": "gulp build"
   },
   "author": {
     "name": "David Haines",
@@ -18,6 +17,11 @@
       "name": "Ahmed Nuaman",
       "email": "ahmed@polyglotted.io"
     }
+  ],
+  "files": [
+    "dist/",
+    "lib/",
+    "README.md"
   ],
   "repository": {
     "type": "git",
@@ -30,7 +34,7 @@
   },
   "dependencies": {
     "jdataview": "^2.5.0",
-    "lodash": "^3.8.0",
+    "lodash": "^3.9.1",
     "long": "^2.2.3"
   }
 }
