--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "type": "git",
     "url": "git@github.com:polyglotted/pg-long.git"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "devDependencies": {
     "gulp": "^3.8.11",
-    "gulp-fibre-tasks": "^1.0.6"
+    "gulp-fibre-tasks": "^1.3.0"
   },
   "dependencies": {
     "jdataview": "^2.5.0",
